pi-parser/tests/snapshots/expr__parse_binops_float_minus.snap
---
source: pi-parser/tests/expr.rs
expression: "&expr"
---
node:
  BinOp:
    x:
      node:
        FloatLit:
          negative:
            node: false
            span:
              range:
                start: 0
                end: 1
              file_id: 0
          bits: 32
          val:
            node: 92.121
            span:
              range:
                start: 0
                end: 8
              file_id: 0
      span:
        range:
          start: 0
          end: 8
        file_id: 0
    op: Minus
    y:
      node:
        FloatLit:
          negative:
            node: false
            span:
              range:
                start: 9
                end: 10
              file_id: 0
          bits: 32
          val:
            node: 0.25
            span:
              range:
                start: 9
                end: 13
              file_id: 0
      span:
        range:
          start: 9
          end: 13
        file_id: 0
span:
  range:
    start: 0
    end: 13
  file_id: 0

