pi-parser/tests/snapshots/expr__parse_ident.snap
---
source: pi-parser/tests/expr.rs
expression: "&expr"
---
node:
  Ident: foo
span:
  range:
    start: 0
    end: 3
  file_id: 0

