pi-parser/tests/snapshots/expr__parse_types_prims_i32.snap
---
source: pi-parser/tests/expr.rs
expression: "&expr"
---
node:
  PrimitiveType: I32
span:
  range:
    start: 0
    end: 3
  file_id: 0

