pi-parser/tests/snapshots/expr__parse_types_ptr_ident.snap
---
source: pi-parser/tests/expr.rs
expression: "&expr"
---
node:
  PtrType:
    node:
      Ident: foo
    span:
      range:
        start: 0
        end: 3
      file_id: 0
span:
  range:
    start: 0
    end: 4
  file_id: 0

